# QuickIt

./: README.md
Inventory/inventory-read/: Cargo.toml
Inventory/inventory-read/src/db/: mod.rs  pool.rs
Inventory/inventory-read/src/handlers/: stock.rs
Inventory/inventory-read/src/kafka/: mod.rs  producer.rs
Inventory/inventory-read/src/models/: stock.rs
Inventory/inventory-read/src/tests/: integration_test.rs
Inventory/inventory-read/src/utils/: app_error.rs
Inventory/inventory-write/: contribution_details.md  go.sum
Inventory/inventory-write/tests/: db_test.go  handler_test.go
Inventory/warehouse-sync/: Dockerfile  README.md  pyproject.toml  requirements.txt
Inventory/warehouse-sync/config/: scheduler.yaml
Inventory/warehouse-sync/internal/db/: inventory_writer.py
Inventory/warehouse-sync/internal/erp/: warehouse_api.py
Inventory/warehouse-sync/internal/kafka_stream/: producer.py
Inventory/warehouse-sync/internal/metrics/: exporter.py
Inventory/warehouse-sync/internal/models/: stock.py
Inventory/warehouse-sync/internal/sync/: job.py  scheduler.py
Inventory/warehouse-sync/tests/: test_sync_job.py
inventory-read/: .gitignore  Dockerfile  docker-compose.yml
inventory-read/src/: main.rs
inventory-write/: .env  .gitignore  Dockerfile  go.mod  instruction.md
inventory-write/cmd/: main.go
inventory-write/tests/: kafka_test.go
warehouse-sync/: Dockerfile  docker-compose.yaml  pyproject.toml
warehouse-sync/cmd/: run_sync.py
warehouse-sync/config/: config.py
warehouse-sync/tests/: test_erp_api.py
(+8 files in other folders)
